2007-03-24  Andreas Nilsson <andreas@andreasn.se>

	* www.gnome.org/projects/index.html:
	Changed Usebility to Usability, fixes bug #422389

2007-03-22  Andreas Nilsson <andreas@andreasn.se>

	* www.gnome.org/index.html:
	Changed back to 2.18 banner only as bug days are over.


2006-10-23  Brian Cameron  <brian.cameron@sun.com>

	* configure.in, www.gnome.org/projects/gdm/*.html,
	  www.gnome.org/projects/gdm/docs/2.18: Updated project
	  page with latest release information and added 2.18
	  docs.

2007-03-22  Andreas Nilsson <andreas@andreasn.se>

	* www.gnome.org/index.html:
	Fixed the size and url on the 2.18 banner.

2007-03-22  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/index.html: updated SoC deadline to March 26.

2007-03-19  Andre Klapper  <a9016009@gmx.de>

	* www.gnome.org/img/flash/bugday.png: added.

2007-03-19  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/start/2.18/index.wml: update link to use
	torrent.gnome.org

2007-03-19  Murray Cumming  <murrayc@murrayc.com>

	* www.gnome.org/community/index.wml:
	* www.gnome.org/contact/index.wml:
	* www.gnome.org/support/index.wml: Mentioned the GNOME Code of Conduct.
	Presumably these similar pages will be combined somehow in the revamped 
	web site.

2007-03-14  Lucas Rocha  <lucasr@gnome.org>

	* www.gnome.org/index.html: mention SoC 2007 just after the GNOME 2.18
	entry.

2007-03-14  Elijah Newren  <newren gmail com>

	* www.gnome.org/index.html:
	Mention 2.18 release instead of 2.16 release.

2007-03-14  Elijah Newren  <newren gmail com>

	* www.gnome.org/start/Makefile.am:
	Have the build system skip building release notes for past releases

2007-03-14  Karsten Bräckelmann  <guenther@rudersport.de>

	* www.gnome.org/projects/garnome/index.html: Welcome to 2.18.0!

2007-03-14  Elijah Newren  <newren gmail com>

	* www.gnome.org/htaccess:
	redirect /start/stable to /start/2.18 instead of /start/2.16.

	* www.gnome.org/start/2.18:
	Removing not-yet-official warning, and update link to community