@@ -63,23 +63,6 @@ is an online magazine devoted to everything surrounding the GNOME Desktop.</p>
 <div id="bottomLeftRight">
 
 <h2>Upcoming Events</h2>
-<h3><a href="http://www.guademy.org/">Guademy</a></h3>
-<i>March 23-25, 2007; A Coru&#241;a, Spain</i>
-
-<p>Guademy is a meeting where the developers of the free desktops KDE and GNOME
-share working sessions with other people interested in collaborating with both
-projects. The event is being organized by GPUL.</p>
-
-<p>The main two objectives are:
-<ul>
-<li>Create new projects and initiatives of collaboration between both
-Desktops.</li>
-<li>Allow new developers to get started in both projects.</li>
-</ul>
-<p>We expect developers involved with the projects from GNOME and KDE around
-Spain, but the hackmeeting is open to developers all around the world.</p>
-
-
 <h3><a href="http://www.guadec.org/">GUADEC 2007</a></h3>
 <i>July 15-21, 2007; Birmingham, UK</i>
 <p>At the annual European GNOME Conference, GNOME hackers from all across the
