@@ -1,3 +1,8 @@
+2007-03-26  Andreas Nilsson <andreas@andreasn.se>
+
+	* www.gnome.org/projects/index.html:
+	Removed the Guademy event, as it's over now.
+
 2007-03-24  Andreas Nilsson <andreas@andreasn.se>
 
 	* www.gnome.org/projects/index.html:
